# media.sheppsu.me

./: .env  .gitignore  Cargo.toml  README.md  template.env
pages/: index.html
server/: Cargo.toml
server-db/: Cargo.toml
server-db/src/: lib.rs
server/src/: main.rs
static/js/: view.js
