[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4.9.0"
bytes = "1.9.0"
dotenv = "0.15.0"
env_logger = "0.11.6"
futures = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
log = "0.4.22"
mime = "0.3.17"
rand = "0.8.5"
server-db = { path = "../server-db" }
sha2 = "0.10.8"
tokio = "1.42.0"
